--- a/Backend/FinanceTrackerApplication/src/main/resources/application.properties
+++ b/Backend/FinanceTrackerApplication/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=FinanceTrackerApplication
+spring.data.mongodb.database=finance_tracker_db
+spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
