--- a/Backend/FinanceTrackerApplication/pom.xml
+++ b/Backend/FinanceTrackerApplication/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.JasonRoth.financeTracker</groupId>
 	<artifactId>FinanceTrackerApplication</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<name>FinanceTrackerApplication</name>
 	<description>Personal Finance Tracker Application</description>
 	<url/>
