--- a/Backend/FinanceTrackerApplication/Dockerfile
+++ b/Backend/FinanceTrackerApplication/Dockerfile
@@ -1,6 +1,11 @@
 # Use the Maven image to build the application
-FROM maven:3.8.5-openjdk-17 AS build
+FROM openjdk:17-jdk-slim AS build
 WORKDIR /app
+
+# Install Maven
+RUN apt-get update && \
+    apt-get install -y maven && \
+    apt-get clean;
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package
