--- a/Backend/FinanceTrackerApplication/Dockerfile
+++ b/Backend/FinanceTrackerApplication/Dockerfile
@@ -1,11 +1,7 @@
 # Use the Maven image to build the application
-FROM openjdk:17-jdk-slim AS build
+FROM maven:3.8.5-openjdk-17 AS build
 WORKDIR /app
 
-# Install Maven
-RUN apt-get update && \
-    apt-get install -y maven && \
-    apt-get clean;
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package
