--- a/Backend/FinanceTrackerApplication/Dockerfile
+++ b/Backend/FinanceTrackerApplication/Dockerfile
@@ -2,11 +2,22 @@
 FROM maven:3.8.5-openjdk-17 AS build
 WORKDIR /app
 
-COPY pom.xml .
+# Copy the Maven wrapper files
+COPY .mvn/ .mvn
+COPY mvnw pom.xml ./
+
+# Download the dependencies
+RUN ./mvnw dependency:go-offline -B
+
+# Copy the rest of the application code
 COPY src ./src
-RUN mvn clean package
+
+# Package the application
+RUN ./mvnw clean package -DskipTests
 
 # Use the OpenJDK image to run the application
 FROM openjdk:17-jdk-slim
-COPY --from=build /app/target/FinanceTrackerApplication-0.1.jar /app/FinanceTrackerApplication-0.1.jar
-ENTRYPOINT ["java", "-jar", "/app/FinanceTrackerApplication-0.1.jar"]
+WORKDIR /app
+COPY --from=build /app/target/FinanceTrackerApplication-0.1.jar /app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
