--- a/Backend/FinanceTrackerApplication/Dockerfile
+++ b/Backend/FinanceTrackerApplication/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
 # Copy the generated JAR file into the container
-COPY target/your-app-name.jar app.jar
+COPY target/FinanceTrackerApplication-0.1.jar app.jar
 
 # Expose the port your application runs on
 EXPOSE 8080
