--- a/Backend/FinanceTrackerApplication/Dockerfile
+++ b/Backend/FinanceTrackerApplication/Dockerfile
@@ -1,13 +1,24 @@
-# Use a base image that has Java installed
+# Stage 1: Build
+FROM maven:3.8.4-openjdk-17 AS builder
+
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy the pom.xml and install dependencies
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package
+
+# Stage 2: Package
 FROM openjdk:17-jdk-alpine
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the generated JAR file into the container
-COPY target/FinanceTrackerApplication-0.1.jar app.jar
+# Copy the JAR file from the build stage
+COPY --from=builder /app/target/FinanceTrackerApplication-0.1.jar app.jar
 
-# Expose the port your application runs on
+# Expose the port the application runs on
 EXPOSE 8080
 
 # Command to run the application
