--- a/Backend/FinanceTrackerApplication/src/main/resources/application.properties
+++ b/Backend/FinanceTrackerApplication/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${
 jwt.secret-key=${env.JWT_SECRET}
 jwt.expiration=${env.EXPIRATION_TIME}
 server.port=${env.PORT:8080}
+server.address=0.0.0.0
