--- a/Backend/FinanceTrackerApplication/src/main/resources/application.properties
+++ b/Backend/FinanceTrackerApplication/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=FinanceTrackerApplication
 spring.data.mongodb.database=finance_tracker_db
-spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
-jwt.secret-key=${env.JWT_SECRET}
-jwt.expiration=${env.EXPIRATION_TIME}
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}
+jwt.secret-key=${JWT_SECRET}
+jwt.expiration=${EXPIRATION_TIME}
 server.port=${PORT:8080}
